--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 Step By Step Development.docx
+/public/images/admin_images/product_images/
+/public/images/admin_images/category_images/
+/public/videos
